--- a/cities.html
+++ b/cities.html
@@ -23,6 +23,7 @@
   <li>Detroit</li>
   <li>Fillmore</li>
   <li>Glendale</li>
+<li>Houston</li>
  <li>Saint Paul</li>
 <!-- ALPHABET END -->
 </ul>
